--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- Top line -->
     <header>
       
-        <a href="">WEBSTUDIO</a>
+        <a href="#">WEBSTUDIO</a>
         <nav>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a href="#">Studio</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contacts</a></li>
         </ul>
      </nav>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -49,6 +49,7 @@
             <h3>Technologies</h3>
             <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
+        </ul>
 </section>
 <!-- Section2 -->
 <section>
