--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <!-- Top line -->
     <header>
-      
-        <a href="#">WEBSTUDIO</a>
-        <nav>
+      <nav></nav>
+        <a href="#">WebStudio</a>
+        
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
@@ -30,7 +30,7 @@
       </section>
 <!-- Section1 -->
 <section>
-    <h2></h2>
+    <h2 hidden></h2>
     <ul>
         <li>
             <h3>Strategy</h3>
@@ -65,22 +65,22 @@
     <h2>Our Team</h2>
     <ul>
         <li>
-            <img src="./images/team/card-a.jpg" alt="Mark Guerrero" width="264"> 
+            <img src="./images/team/card-a.jpg" alt="Photo by Mark Guerrero" width="264" height="260"> 
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
         </li>
         <li>
-            <img src="./images/team/card-b.jpg" alt="Tom Ford" width="264">
+            <img src="./images/team/card-b.jpg" alt="Photo by Tom Ford" width="264" height="260">
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>            
         </li>
         <li>
-            <img src="./images/team/card-c.jpg" alt="Camila Garcia" width="264">
+            <img src="./images/team/card-c.jpg" alt="Photo by Camila Garcia" width="264" height="260">
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
         </li>
         <li>
-            <img src="./images/team/cdrd-d.jpg" alt="Daniel Wilson" width="264">
+            <img src="./images/team/cdrd-d.jpg" alt="Photo by Daniel Wilson" width="264" height="260">
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
         </li>
@@ -89,7 +89,7 @@
     </main>
 <!-- Footer -->
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="">WebStudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
