--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Top line -->
     <header>
-      <nav></nav>
+      <nav>
         <a href="#">WebStudio</a>
         
         <ul>
