--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Top line -->
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a href="#">WebStudio</a>
         
         <ul>
           <li><a href="#">Studio</a></li>
