--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
-        
+
         <ul>
           <li><a href="#">Studio</a></li>
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">Contacts</a></li>
         </ul>
-     </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-      
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!-- Hero image -->
@@ -28,69 +31,107 @@
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
-<!-- Section1 -->
-<section>
-    <h2 hidden></h2>
-    <ul>
-        <li>
+      <!-- Section1 -->
+      <section>
+        <h2 hidden></h2>
+        <ul>
+          <li>
             <h3>Strategy</h3>
-            <p>Our goal is to identify the business
-            problem to walk away with the perfect and creative solution. </p>    
-        </li>
-        <li> 
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
             <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-        </li>
-        <li>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
             <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-        </li>
-        <li>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
             <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-        </li>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
         </ul>
-</section>
-<!-- Section2 -->
-<section>
-    <h2>What are we doing</h2>
-    <ul>
-        <li><img src="./images/img-comp.jpg" alt="Computer" width="360"></li>
-        <li><img src="./images/img-tablet.jpg" alt="Tablet" width="360"></li>
-        <li><img src="./images/img-phone.jpg" alt="Phone" width="360"></li>
-    </ul>
-</section>
-<!-- Section3 -->
-<section>
-    <h2>Our Team</h2>
-    <ul>
-        <li>
-            <img src="./images/team/card-a.jpg" alt="Photo by Mark Guerrero" width="264" height="260"> 
+      </section>
+      <!-- Section2 -->
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./images/img-comp.jpg" alt="Computer" width="360" />
+          </li>
+          <li>
+            <img src="./images/img-tablet.jpg" alt="Tablet" width="360" />
+          </li>
+          <li><img src="./images/img-phone.jpg" alt="Phone" width="360" /></li>
+        </ul>
+      </section>
+      <!-- Section3 -->
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/team/card-a.jpg"
+              alt="Photo by Mark Guerrero"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
-        </li>
-        <li>
-            <img src="./images/team/card-b.jpg" alt="Photo by Tom Ford" width="264" height="260">
+          </li>
+          <li>
+            <img
+              src="./images/team/card-b.jpg"
+              alt="Photo by Tom Ford"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>            
-        </li>
-        <li>
-            <img src="./images/team/card-c.jpg" alt="Photo by Camila Garcia" width="264" height="260">
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/team/card-c.jpg"
+              alt="Photo by Camila Garcia"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
-        </li>
-        <li>
-            <img src="./images/team/cdrd-d.jpg" alt="Photo by Daniel Wilson" width="264" height="260">
+          </li>
+          <li>
+            <img
+              src="./images/team/cdrd-d.jpg"
+              alt="Photo by Daniel Wilson"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
-        </li>
-    </ul>
-</section>
+          </li>
+        </ul>
+      </section>
     </main>
-<!-- Footer -->
+    <!-- Footer -->
     <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
